<resources>
    <string name="app_name">Alulu Thesis</string>
    <string name="thesis_title">How to Design a Home That Loves You Back?</string>

    <string name="menu_home">Home Page</string>
    <string name="menu_introduction">Introduction</string>
    <string name="menu_chapter_1">Chapter 1</string>
    <string name="menu_conclusion">Conclusion</string>
    <string name="menu_reference">Reference</string>
    <string name="menu_chapter_2">Chapter 2</string>

    <string name="nav_header_text">Table of Content</string>
    <string name="action_play">Play</string>
    <string name="action_stop">Stop</string>
    <string name="action_pause">Pause</string>
    <string name="text_playing">Playing</string>
    <string name="text_stopped">Stopped</string>
    <string name="text_paused">Paused</string>
    <string name="text_playing_prev">Playing previous section</string>
    <string name="text_playing_next">Playing next section</string>
    <string name="action_next">Next</string>
    <string name="action_previous">Previous</string>
    <string name="menu_content">Content</string>
    <string name="action_help">Help</string>
    <string name="title_introduction">Introduction</string>
    <string name="title_home">Home Page</string>
    <string name="action_toc">Table of Content</string>

    <string name="medium_font">sans-serif-medium</string>
    <string name="help_play_text">On the title of each section, you could press the play button to let me read for you.</string>
    <string name="help_stop_text">And during my reading, you could always mute me by pressing the stop button on the bottom of the page</string>

    <string name="s1"><u>Research Method Statement</u></string>
    <string name="s2"><u>Introduction</u></string>
    <string name="s3"><u>Chapter 1    Object and Human, Home and Human</u></string>
    <string name="s4"><u>1.1 Philosophical discussions on objects</u></string>
    <string name="s5"><u>1.2 Humans love objects.</u></string>
    <string name="s6"><u>1.3 Homes, objects and emotions</u></string>
    <string name="s7"><u>1.3.1 Humans loves a home as a large object or a collection of personal objects</u></string>
    <string name="s8"><u>1.3.2 Homes are objects and collections of personal objects evoking people\'s senses.</u></string>
    <string name="s9"><u>Chapter 2   Techno-object and Human                      - Towards further intimate relationships between humans and objects</u></string>
    <string name="s10"><u>2.1 Techno-object (object with anthropomorphic technologies) and techno-animism</u></string>
    <string name="s11"><u>2.2 Anthropomorphic technologies: computer science and artificial intelligence</u></string>
    <string name="s12"><u>2.2.1 The psychological reasons for basic computers and artificial intelligence creating an illusion as living beings</u></string>
    <string name="s13"><u>2.2.2 Objects with basic computers generate interactions with humans.</u></string>
    <string name="s14"><u>2.2.3 Objects with artificial intelligence achieve social interactions with humans.</u></string>
    <string name="s15"><u>2.2.4 Emotion AI and sensors: enhancing the social interactions between techno-objects and humans</u></string>
    <string name="s16"><u>2.3 Anthropomorphic technologies: human-robot interactions and physical expressions</u></string>
    <string name="s17"><u>2.3.1 Familiar appearance (virtual and physcal) and facial expressions (virtual and physical)</u></string>
    <string name="s18"><u>2.3.2 Body movement (virtual and physical) and physical touch (physical)</u></string>
    <string name="s19"><u>Chapter 3   Speculations and Conclusions</u></string>
    <string name="s20"><u>3.1 Speculation: A caring home with anthropomorphic technologies</u></string>
    <string name="s21"><u>3.2 Conclusion</u></string>
    <string name="s22"><u>Appendix</u></string>
    <string name="s23"><u>Bibliography</u></string>

</resources>
