<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_introduction"
            android:title="@string/menu_introduction" />
        <item
            android:id="@+id/nav_chapter_1"
            android:title="@string/menu_chapter_1" />
        <item
            android:id="@+id/nav_chapter_2"
            android:title="@string/menu_chapter_2" />
        <item
            android:id="@+id/nav_conclusion"
            android:title="@string/menu_conclusion" />
        <item
            android:id="@+id/nav_reference"
            android:title="@string/menu_reference" />
    </group>

</menu>
