<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_4"
    tools:activity=".ui.ContentFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="108dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/s1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/s1"
                android:textAppearance="@style/AppTheme.ContentText"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/s2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/s2"
                android:textAppearance="@style/AppTheme.ContentText"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/s3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/s3"
                android:textAppearance="@style/AppTheme.ContentText"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/s4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="94dp"
                android:text="@string/s4"
                android:textAppearance="@style/AppTheme.ContentText" />

            <TextView
                android:id="@+id/s5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="94dp"
                android:text="@string/s5"
                android:textAppearance="@style/AppTheme.ContentText" />

            <TextView
                android:id="@+id/s6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="94dp"
                android:text="@string/s6"
                android:textAppearance="@style/AppTheme.ContentText" />

            <TextView
                android:id="@+id/s7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="94dp"
                android:text="@string/s7"
                android:textAppearance="@style/AppTheme.ContentText" />

            <TextView
                android:id="@+id/s8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="94dp"
                android:text="@string/s8"
                android:textAppearance="@style/AppTheme.ContentText" />

            <TextView
                android:id="@+id/s9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/s9"
                android:textAppearance="@style/AppTheme.ContentText"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/s10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="94dp"
                android:text="@string/s10"
                android:textAppearance="@style/AppTheme.ContentText" />

            <TextView
                android:id="@+id/s11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="94dp"
                android:text="@string/s11"
                android:textAppearance="@style/AppTheme.ContentText" />

            <TextView
                android:id="@+id/s12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="94dp"
                android:text="@string/s12"
                android:textAppearance="@style/AppTheme.ContentText" />

            <TextView
                android:id="@+id/s13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="94dp"
                android:text="@string/s13"
                android:textAppearance="@style/AppTheme.ContentText" />

            <TextView
                android:id="@+id/s14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="94dp"
                android:text="@string/s14"
                android:textAppearance="@style/AppTheme.ContentText" />

            <TextView
                android:id="@+id/s15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="94dp"
                android:text="@string/s15"
                android:textAppearance="@style/AppTheme.ContentText" />

            <TextView
                android:id="@+id/s16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="94dp"
                android:text="@string/s16"
                android:textAppearance="@style/AppTheme.ContentText" />

            <TextView
                android:id="@+id/s17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="94dp"
                android:text="@string/s17"
                android:textAppearance="@style/AppTheme.ContentText" />

            <TextView
                android:id="@+id/s18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="94dp"
                android:text="@string/s18"
                android:textAppearance="@style/AppTheme.ContentText" />

            <TextView
                android:id="@+id/s19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/s19"
                android:textAppearance="@style/AppTheme.ContentText"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/s20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="94dp"
                android:text="@string/s20"
                android:textAppearance="@style/AppTheme.ContentText" />

            <TextView
                android:id="@+id/s21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="94dp"
                android:text="@string/s21"
                android:textAppearance="@style/AppTheme.ContentText" />

            <TextView
                android:id="@+id/s22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/s22"
                android:textAppearance="@style/AppTheme.ContentText"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/s23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/s23"
                android:textAppearance="@style/AppTheme.ContentText"
                android:textSize="24sp" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>